--- a/references.bib
+++ b/references.bib
@@ -619,3 +619,64 @@
   url = {https://www.jstage.jst.go.jp/article/sjpr/62/3/62_221/_article/-char/ja/},
   urldate = {2023-10-09}
 }
+
+@article{baumeisterChartingFutureSocial2016,
+  title = {Charting the Future of Social Psychology on Stormy Seas: {{Winners}}, Losers, and Recommendations},
+  shorttitle = {Charting the Future of Social Psychology on Stormy Seas},
+  author = {Baumeister, Roy F.},
+  date = {2016-09-01},
+  journaltitle = {Journal of Experimental Social Psychology},
+  series = {Rigorous and {{Replicable Methods}} in {{Social Psychology}}},
+  volume = {66},
+  pages = {153--158},
+  issn = {0022-1031},
+  doi = {10.1016/j.jesp.2016.02.003},
+  url = {https://www.sciencedirect.com/science/article/pii/S002210311600007X},
+  urldate = {2023-10-13},
+}
+
+@article{finkelReplicabilityOtherFeatures2017,
+  title = {Replicability and Other Features of a High-Quality Science: {{Toward}} a Balanced and Empirical Approach.},
+  shorttitle = {Replicability and Other Features of a High-Quality Science},
+  author = {Finkel, Eli J. and Eastwick, Paul W. and Reis, Harry T.},
+  date = {2017-08},
+  journaltitle = {Journal of Personality and Social Psychology},
+  shortjournal = {Journal of Personality and Social Psychology},
+  volume = {113},
+  number = {2},
+  pages = {244--253},
+  issn = {1939-1315, 0022-3514},
+  doi = {10.1037/pspi0000075},
+  url = {http://doi.apa.org/getdoi.cfm?doi=10.1037/pspi0000075},
+  urldate = {2023-10-13},
+  langid = {english}
+}
+
+@inproceedings{tukeyExploratoryDataAnalysis1972,
+  title = {Exploratory Data Analysis: As Part of a Larger Whole},
+  booktitle = {Proceedings of the 18th {{Conference}} on {{Design}} of {{Experiments}} in {{Army Research}} and {{Development}} and {{Training}}},
+  author = {Tukey, John W.},
+  date = {1972-10-27},
+  pages = {1--18},
+  location = {{U.S. Army Research Office}},
+  url = {https://apps.dtic.mil/sti/tr/pdf/AD0776910.pdf}
+}
+
+@article{tukeyWeNeedBoth1980,
+  title = {We {{Need Both Exploratory}} and {{Confirmatory}}},
+  author = {Tukey, John W.},
+  date = {1980},
+  journaltitle = {The American Statistician},
+  volume = {34},
+  number = {1},
+  eprint = {2682991},
+  eprinttype = {jstor},
+  pages = {23--25},
+  publisher = {{[American Statistical Association, Taylor \& Francis, Ltd.]}},
+  issn = {0003-1305},
+  doi = {10.2307/2682991},
+  url = {http://www.jstor.org/stable/2682991},
+  urldate = {2023-10-13}
+}
+
+
