--- a/references.bib
+++ b/references.bib
@@ -679,4 +679,30 @@
   urldate = {2023-10-13}
 }
 
+@online{akkerEffectivenessPreregistrationPsychology2023,
+  title = {The Effectiveness of Preregistration in Psychology: {{Assessing}} Preregistration Strictness and Preregistration-Study Consistency},
+  shorttitle = {The Effectiveness of Preregistration in Psychology},
+  author = {family=Akker, given=Olmo, prefix=van den, useprefix=false and Bakker, Marjan and family=Assen, given=Marcel A. L. M., prefix=van, useprefix=false and Pennington, Charlotte Rebecca and Verweij, Leone and Elsherif, Mahmoud and Claesen, Aline and Gaillard, Stefan Daniel Michel and Yeung, Siu Kit and Frankenberger, Jan-Luca and Krautter, Kai and Cockcroft, Jamie P. and Kreuer, Katharina Sybille and Evans, Thomas Rhys and Heppel, Frédérique and Schoch, Sarah Fiona and Korbmacher, Max and Yamada, Yuki and Albayrak-Aydemir, Nihan and Alzahawi, Shilaan and Sarafoglou, Alexandra and Sitnikov, Maksim and Dechterenko, Filip and Wingen, Sophia and Grinschgl, Sandra and Hartmann, Helena and Stewart, Suzanne and Oliveira, Catia Margarida and Ashcroft-Jones, Sarah and Baker, Bradley James and Wicherts, Jelte},
+  date = {2023-05-10T14:22:39},
+  doi = {10.31222/osf.io/h8xjw},
+  url = {https://osf.io/preprints/metaarxiv/h8xjw/},
+  urldate = {2023-10-13},
+  langid = {american},
+  pubstate = {preprint},
+}
+
+@article{claesenComparingDreamReality2021,
+  title = {Comparing Dream to Reality: An Assessment of Adherence of the First Generation of Preregistered Studies},
+  shorttitle = {Comparing Dream to Reality},
+  author = {Claesen, Aline and Gomes, Sara and Tuerlinckx, Francis and Vanpaemel, Wolf},
+  date = {2021-10-27},
+  journaltitle = {Royal Society Open Science},
+  volume = {8},
+  number = {10},
+  pages = {211037},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rsos.211037},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsos.211037},
+  urldate = {2023-10-13}
+}
 
