--- a/references.bib
+++ b/references.bib
@@ -706,3 +706,15 @@
   urldate = {2023-10-13}
 }
 
+@article{peikertReproducibleDataAnalysis2021,
+  title = {A {{Reproducible Data Analysis Workflow With R Markdown}}, {{Git}}, {{Make}}, and {{Docker}}},
+  author = {Peikert, Aaron and Brandmaier, Andreas M.},
+  date = {2021-05-11},
+  journaltitle = {Quantitative and Computational Methods in Behavioral Sciences},
+  pages = {1--27},
+  issn = {2699-8432},
+  doi = {10.5964/qcmb.3763},
+  url = {https://qcmb.psychopen.eu/index.php/qcmb/article/view/3763},
+  urldate = {2023-10-13},
+  langid = {english}
+}
