--- a/references.bib
+++ b/references.bib
@@ -718,3 +718,37 @@
   urldate = {2023-10-13},
   langid = {english}
 }
+
+@article{oberauerAddressingTheoryCrisis2019,
+  title = {Addressing the Theory Crisis in Psychology},
+  author = {Oberauer, Klaus and Lewandowsky, Stephan},
+  date = {2019-10-01},
+  journaltitle = {Psychonomic Bulletin \& Review},
+  shortjournal = {Psychon Bull Rev},
+  volume = {26},
+  number = {5},
+  pages = {1596--1618},
+  issn = {1531-5320},
+  doi = {10.3758/s13423-019-01645-2},
+  url = {https://doi.org/10.3758/s13423-019-01645-2},
+  urldate = {2023-10-13},
+  langid = {english}
+}
+
+@article{fiedlerWhatConstitutesStrong2017,
+  title = {What {{Constitutes Strong Psychological Science}}? {{The}} ({{Neglected}}) {{Role}} of {{Diagnosticity}} and {{A Priori Theorizing}}},
+  shorttitle = {What {{Constitutes Strong Psychological Science}}?},
+  author = {Fiedler, Klaus},
+  date = {2017-01-01},
+  journaltitle = {Perspectives on Psychological Science},
+  shortjournal = {Perspect Psychol Sci},
+  volume = {12},
+  number = {1},
+  pages = {46--61},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1745-6916},
+  doi = {10.1177/1745691616654458},
+  url = {https://doi.org/10.1177/1745691616654458},
+  urldate = {2023-10-14},
+  langid = {english},
+}
