--- a/references.bib
+++ b/references.bib
@@ -752,3 +752,29 @@
   urldate = {2023-10-14},
   langid = {english},
 }
+
+@book{sprengerBayesianPhilosophyScience2019,
+  title = {Bayesian {{Philosophy}} of {{Science}}},
+  author = {Sprenger, Jan and Hartmann, Stephan},
+  date = {2019-08-23},
+  publisher = {{Oxford University Press}},
+  doi = {10.1093/oso/9780199672110.001.0001},
+  url = {https://doi.org/10.1093/oso/9780199672110.001.0001},
+  urldate = {2023-10-14},
+  isbn = {978-0-19-967211-0}
+}
+
+@article{chiharaProblemsBayesianConfirmation1987,
+  title = {Some {{Problems}} for {{Bayesian Confirmation Theory}}},
+  author = {Chihara, Charles S.},
+  date = {1987-12},
+  journaltitle = {The British Journal for the Philosophy of Science},
+  volume = {38},
+  number = {4},
+  pages = {551--560},
+  publisher = {{The University of Chicago Press}},
+  issn = {0007-0882},
+  doi = {10.1093/bjps/38.4.551},
+  url = {http://www.journals.uchicago.edu/doi/abs/10.1093/bjps/38.4.551},
+  urldate = {2023-10-14}
+}
