--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -446,7 +446,7 @@ plots[["Posterior Probability"]] +
 ```
 
 ```{r other-measures-fig, cache=TRUE, warning=FALSE}
-#| fig.cap: "\\label{fig:other-measures}Several measures for confirmation as an increase in firmness as a function of $\\tau$, where $\\tau$ is either certain (solid line) or maximally uncertain (dotted line)."
+#| fig.cap: "\\label{fig:other-measures}Several measures for confirmation as an increase in firmness as a function of $\\tau$, where $\\tau$ is either certain (solid line) or maximally uncertain (dotted line). Measure taken from @sprengerBayesianPhilosophyScience2019, Table 1.3, p. 51."
 
 plots[!(names(plots) %in% "Posterior Probability")] %>% 
   map(~ . +   theme_tufte()) %>% 
