--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -367,7 +367,7 @@ First, according to most interpretations of null hypothesis testing, the absence
 Second, the research hypothesis seldomly equals the statistical alternative-hypothesis (most research hypothesis are more specific then "any value except zero").
 In fact, it is entirely possible to assume the null hypothesis as a research hypothesis, as is commonly done in e.g., structural equation modelling, where the roles of detectability, theoretical risk and type-I/II error rate switch.
 We argue that theoretical risk (and hence its complement, $P(E|\neg{}H)$) also encompasses factors outside the statistical realm, most notably the study design and broader analytical strategies.
-Type-I error rate is the property of a statistical test under some assumptions, whereas theoretical risk is a researchers believe.
+Type-I error rate is the property of a statistical test under some assumptions, whereas theoretical risk is a researchers' believe.
 One may take such theoretical properties as a first starting point to form a substantive believe but surely researchers ought to take more factors into consideration.
 For example, if a researcher believes that there might be confounding variables at play for the relation between two variables, that should decrease the theorethical risk; after all they might find an association purely on account of the confounders.
 
@@ -545,13 +545,13 @@ The importance of distinguishing between low and highly uncertain theoretical ri
 5. The results are obtained by unplanned exploration.
 
 In case 1, there is no theoretical risk ($P(\neg{}E|\neg{}H) = 0$).
-If we know that no matter what, the results engineered to support the hypothesis, there is no reason to collect data.
+If we know that the results will be engineered to support the hypothesis no matter what, there is no reason to collect data.
 Case 2 has a similar problem.
 After all, the hypothesis that it had to happen the way it did happen is irrefutable.
 In fact, both cases should be problematic to anyone who subscribes to the statistical relevancy condition because if we choose the hypothesis in accordance with the data or vice versa, without restrictions, they are not related anymore (i.e., observing the data does not tell us anything about the hypothesis and the other way around).
 Case 3, is different since here the theoretical risk is not necessarily low but simply uncertain and perhaps represented by the dotted line in Figure \ref{fig:posterior}/\ref{fig:other-measures}.
 In case 4, the theoretical risk is neither zero (unless the researcher plans to do everything in their power to obtain favourable results, then we have a particular instance case of 1) nor high (that is what makes it exploratory).
-However, we can use statistical properties, simulation or resampling methods, together with scientific reasoning, to get a reasonably certain evaluation of the theoretical risk and hence are in a somewhat favourable position (i.e., close to the solid line in n Figure \ref{fig:posterior}/\ref{fig:other-measures}).
+However, we can take advantage of computational reproducibility, use statistical properties, simulation or resampling methods, together with scientific reasoning, to get a reasonably certain evaluation of the theoretical risk and hence are in a somewhat favourable position (i.e., close to the solid line in n Figure \ref{fig:posterior}/\ref{fig:other-measures}).
 This favorable position leads us to recommend preregistration of exploratory studies.
 Case 5 shares the neither zero nor high theoretical risk of case 4 but has additional uncertainty about how much exploration was going on (how hard did researcher try to come up with favourable results).
 Its low theoretical risk combined with high uncertainty about it, make it difficult to produce compelling evidence.
